# bird-rpki-client

./: CMakeLists.txt  Makefile  README  bird-rpki-client.c  bird-rpki-client.h  cli.c  cli.h  cmake_install.cmake  config.c  config.h  rpkiRtrCacheServerTable.c  rpkiRtrCacheServerTable.h  rpkiRtrCacheServerTable_data_access.c  rpkiRtrCacheServerTable_data_access.h  rpkiRtrCacheServerTable_data_get.c  rpkiRtrCacheServerTable_data_get.h  rpkiRtrCacheServerTable_data_set.c  rpkiRtrCacheServerTable_data_set.h  rpkiRtrCacheServerTable_enums.h  rpkiRtrCacheServerTable_interface.c  rpkiRtrCacheServerTable_interface.h  rpkiRtrCacheServerTable_oids.h  rpkiRtrPrefixOriginTable.c  rpkiRtrPrefixOriginTable.h  rpkiRtrPrefixOriginTable_data_access.c  rpkiRtrPrefixOriginTable_data_access.h  rpkiRtrPrefixOriginTable_data_get.c  rpkiRtrPrefixOriginTable_data_get.h  rpkiRtrPrefixOriginTable_data_set.c  rpkiRtrPrefixOriginTable_data_set.h  rpkiRtrPrefixOriginTable_enums.h  rpkiRtrPrefixOriginTable_interface.c  rpkiRtrPrefixOriginTable_interface.h  rpkiRtrPrefixOriginTable_oids.h  rpkiRtr_subagent.c  rpkiRtr_subagent.h
